--- a/gb/20/12/24/n12641820.md
+++ b/gb/20/12/24/n12641820.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qcifnw3996/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qcifnw3996/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qcifnw3996/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qcifnw3996/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qcifnw3996/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qcifnw3996/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qcifnw3996/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qcifnw3996/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qcifnw3996/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qcifnw3996/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qcifnw3996/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qcifnw3996/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qcifnw3996/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qcifnw3996/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qcifnw3996/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>培养孩子热爱学习的7个技巧</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/Fotolia_141425783_Subscription_L-600x400.jpg" />
 <h6>父母可以帮助孩子热爱学习，而学习是一个持续的旅程，爱学习会让人终生受益。（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2020年12月24日讯】<ahref="https://github.com/qcifnw3996/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>能按时完成作业？很好！孩子在<ahref="https://github.com/qcifnw3996/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>表现出色？太棒了！孩子<ahref="https://github.com/qcifnw3996/djy/blob/master/gb/tag/%E7%83%AD%E7%88%B1%E5%AD%A6%E4%B9%A0.md#1">热爱学习</a>？那是最好的。父母可以帮助孩子热爱学习。爱学习有什么好处呢？</p>
-<p><ahref="https://github.com/qcifnw3996/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>是一个持续的旅程，爱学习会让人终生受益。正规的学校教育总会有截止时间，但是我们仍旧需要不断的学习新的技能并获取新的知识。这样我们才能更好的胜任工作，更好的适应社会，更好的保持健康的人际关系。</p>
-<p>那些学得最好的人，是<ahref="https://github.com/qcifnw3996/djy/blob/master/gb/tag/%E7%83%AD%E7%88%B1%E5%AD%A6%E4%B9%A0.md#1">热爱学习</a>的人。我们从小就开始学习，所以孩童时期是培养对学习热爱的最好年龄，即便学习过程中会遇到各种困难和挑战。我们如何帮助<ahref="https://github.com/qcifnw3996/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>爱上学习？这并不像您想的那么难。简单地改变您的日常习惯就可帮助孩子培养对学习的热爱。</p>
+<p>【大纪元2020年12月24日讯】<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>能按时完成作业？很好！孩子在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>表现出色？太棒了！孩子<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%83%AD%E7%88%B1%E5%AD%A6%E4%B9%A0.md#1">热爱学习</a>？那是最好的。父母可以帮助孩子热爱学习。爱学习有什么好处呢？</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>是一个持续的旅程，爱学习会让人终生受益。正规的学校教育总会有截止时间，但是我们仍旧需要不断的学习新的技能并获取新的知识。这样我们才能更好的胜任工作，更好的适应社会，更好的保持健康的人际关系。</p>
+<p>那些学得最好的人，是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%83%AD%E7%88%B1%E5%AD%A6%E4%B9%A0.md#1">热爱学习</a>的人。我们从小就开始学习，所以孩童时期是培养对学习热爱的最好年龄，即便学习过程中会遇到各种困难和挑战。我们如何帮助<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>爱上学习？这并不像您想的那么难。简单地改变您的日常习惯就可帮助孩子培养对学习的热爱。</p>
 <h2>1、帮助孩子参与</h2>
 <p>教育专家指出澳大利亚学校学生学习欠佳，是因为长期“缺乏参与”。教育改革和策略正将逐步提高孩子课堂参与。家长可以在家里做一些事情来帮助孩子，比如问孩子学校学到了什么，让孩子为自己学到新知识感到自豪，有些孩子很乐于趁此机会教父们一些东西。</p>
 <p>对孩子所学东西表现出兴趣，好奇并提出很多问题。这能鼓励孩子对自己在学校学习的材料进行更深入的批判性思考，从而加深理解，并能学到更多。</p>
@@ -45,48 +45,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/5/26/n12136321.md#1">【爸妈必修课】正向语言 成长的必要养分</a></li>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/6/18/n12194751.md#1">七至九年级学习目标和辅导建议</a></li>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/7/14/n12255284.md#1">教孩子做正确的事——即使在没人看见时</a></li>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/9/9/n12390345.md#1">六个方法帮助青少年克服拖延症</a></li>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/9/10/n12393573.md#1">专家提8建议 培养孩子在家自主学习的能力</a></li>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/10/23/n12496549.md#1">了解孩子学习数学时会遇到的困难</a></li>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/12/2/n12590079.md#1">在中小学阶段如何学习</a></li>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/12/13/n12616616.md#1">祖孙三代学习珠心算 期望创造亮丽人生</a></li>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/12/14/n12619860.md#1">【爸妈必修课】同学找麻烦 带孩子一起交朋友</a></li>
-<li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/20/12/23/n12639191.md#1">澳洲大学首轮招生 理工科录取分数线下降</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/26/n12136321.md#1">【爸妈必修课】正向语言 成长的必要养分</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/6/18/n12194751.md#1">七至九年级学习目标和辅导建议</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/14/n12255284.md#1">教孩子做正确的事——即使在没人看见时</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/9/n12390345.md#1">六个方法帮助青少年克服拖延症</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/10/n12393573.md#1">专家提8建议 培养孩子在家自主学习的能力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/23/n12496549.md#1">了解孩子学习数学时会遇到的困难</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/2/n12590079.md#1">在中小学阶段如何学习</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/13/n12616616.md#1">祖孙三代学习珠心算 期望创造亮丽人生</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/14/n12619860.md#1">【爸妈必修课】同学找麻烦 带孩子一起交朋友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992365.md#1" target="_blank">殷毅：我在右派专列上</a></li><li><a href="https://github.com/qcifnw3996/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">美国务院年度报告 批中共严重打压宗教自由</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9090867.md#1" target="_blank">从制鞋工到超级业务员的修炼人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/10/3/n12449869.md#1">《圣经》与《推背图》预言的应验与变换10</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/22/n12638393.md#1">不丹王太后梦前世 故地重游感轮回</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/21/n12634510.md#1">【涛哥侃封神】第二十四回 渭水文王聘子牙</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/23/n12640899.md#1">敲敲大脑防失智！中医这样做健脑 告别记忆力衰退</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/18/n12630871.md#1">【思想领袖】埃利斯：川普团队的法律选项</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/22/n12638534.md#1">北上广深罕见停电 专家析原因可能惊人</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/22/n12638349.md#1">大陆疫苗开打分两步 张文宏：让领导干部先打</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/22/n12638836.md#1">沈舟：美舰闯南沙强烈回应中共航母出动</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/21/n12636257.md#1">典礼座位名字被写成孙莉 孙俪一句话化解尴尬</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/20/n12634288.md#1">赵薇罕见用灰色形容爱情 被疑与黄有龙婚变</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/22/n12638646.md#1">黄晓明暴瘦10公斤 一日菜单吓坏网友</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/21/n12636775.md#1">董璇回应假腿争议 摆一字马还写打油诗</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/21/n12636474.md#1">自曝从不用智慧型手机 大导演诺兰解释原因</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/22/n12637180.md#1">巴西流浪汉理发变型男 被家人认出得以团聚</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/22/n12637662.md#1">濒死男子到另一个世界 获知生命的意义</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/20/n12634295.md#1">冬至补一天 身体变好一年 中医推荐6种天然补药</a></li>
-<li><a href="https://github.com/jzbnts3399/djy/blob/master/gb/20/12/23/n12639398.md#1">4岁女童讲述前世记忆 吓坏妈妈</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qcifnw3996/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qcifnw3996/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/24/n12641820.htm">培养孩子热爱学习的7个技巧</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/24/n12641820.htm">培养孩子热爱学习的7个技巧</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qcifnw3996/djy/blob/master/gb/20/12/24/n12641820.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qcifnw3996/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qcifnw3996/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qcifnw3996/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qcifnw3996/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qcifnw3996/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/12/24/n12641820.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
